fix index page spacing

--- a/_sass/_article.sass
+++ b/_sass/_article.sass
@@ -25,6 +25,9 @@
 
     .index-header
 
+        h2
+            margin: 0
+
         h2, h3
             display: inline-block
             opacity: 0.25
